# report-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo_executive_summary.py  package.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHIEF_OF_STAFF_OVERVIEW.md  LLM_REASONING_PLAN.md  USER_GUIDE.md
src/report_generator/: __main__.py  cli.py
src/report_generator/data/: loader.py  transformers.py  validator.py
src/report_generator/output/: email_draft.py
src/report_generator/output/renderers/: __init__.py  base.py  executive.py  partner.py  technical.py
src/report_generator/reasoning/: __init__.py  config.py  provider.py  synthesizer.py
src/report_generator/reasoning/prompts/: __init__.py  action_items.py  executive_summary.py  risk_analysis.py
src/report_generator/reports/example_report/: builder.py  config.py  generator.py  template.html  template_executive.html  template_partner.html  template_technical.html
tests/fixtures/: mock_data.csv
tests/integration/: test_kpr_pipeline.py
tests/unit/: test_action_items_prompt.py  test_cli.py  test_email_draft.py  test_executive_summary_prompt.py  test_kpr_builder.py  test_kpr_template.py  test_llm_provider.py  test_loader.py  test_main.py  test_reasoning_config.py  test_renderers.py  test_risk_analysis_prompt.py  test_synthesizer.py  test_transformers.py  test_validator.py
